@@ -30,7 +30,7 @@ public class DepositPositiveCaseForChecking {
     public void the_user_makes_sure_that_the_operation_is_indicated_in_the_transaction_history(List<BankTransaction> expectedTransactions) {
         Map<String,String> actualResultMap = viewCheckingAccountPage.newlyDepositedAccountTransactionInfoMap();
 
-        BankTransaction expectedTransaction = expectedTransactions.getFirst();
+        BankTransaction expectedTransaction = expectedTransactions.get(0);
         assertEquals(expectedTransaction.getCategory(), actualResultMap.get("actualCategory"), "transaction category mismatch");
         assertEquals(expectedTransaction.getAmount(), Double.parseDouble(actualResultMap.get("actualAmount")), "transaction amount mismatch");
         assertEquals(expectedTransaction.getBalance(), Double.parseDouble(actualResultMap.get("actualBalance")), "transaction balance mismatch");
