@@ -43,7 +43,7 @@ public class SavingsSteps {
     @Then("user should see newly added account card")
     public void user_should_see_newly_added_account_card(List<AccountCard> accountCardList) {
         Map<String,String> actualResultMap = viewSavingsAccountPage.newlyAddedSavingsAccountMap();
-        AccountCard expectedResult = accountCardList.getFirst();
+        AccountCard expectedResult = accountCardList.get(0);
 
         assertEquals(expectedResult.getAccountName(), actualResultMap.get("actualAccountName"));
         assertEquals("Account: " + expectedResult.getAccountType(), actualResultMap.get("actualAccountType"));
@@ -58,7 +58,7 @@ public class SavingsSteps {
     public void user_should_see_the_following_transactions(List<BankTransaction> expectedTransactions) {
         Map<String,String> actualResultMap = viewSavingsAccountPage.newlyAddedSavingsAccountTransactionInfoMap();
 
-        BankTransaction expectedTransaction = expectedTransactions.getFirst();
+        BankTransaction expectedTransaction = expectedTransactions.get(0);
         assertEquals(expectedTransaction.getCategory(), actualResultMap.get("actualCategory"), "transaction category mismatch");
         assertEquals(expectedTransaction.getAmount(), Double.parseDouble(actualResultMap.get("actualAmount")), "transaction amount mismatch");
         assertEquals(expectedTransaction.getBalance(), Double.parseDouble(actualResultMap.get("actualBalance")), "transaction balance mismatch");
